Fix JDK8 build